modified background-color to gray in the homepage

--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     <title>Street Food</title>
 </head>
 <body>
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"/></svg>
-    <header>Street Food</header>
     <div class="container">
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#ourmenu">Our Menu</a></li>
-                <li><a href="#happyhour">Happy hour</a></li>
-                <li><a href="#catering">Catering</a></li>
-                <li><a href="#reservation">Reservation</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
-
-
-            </ul>
-        </nav>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"/></svg>
+        <header>Street Food</header>
+        <div class="nav-link">
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#ourmenu">Our Menu</a></li>
+                    <li><a href="#happyhour">Happy hour</a></li>
+                    <li><a href="#catering">Catering</a></li>
+                    <li><a href="#reservation">Reservation</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+   
     </div>
 </body>
 </html>
