--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </ul>
     </div>
-    <div class="about">
+    <div class="about" id="about"> 
         <img src="images/eating_together.png" alt="">
         <h2>Eat together</h2>
         <p>There is Something profoundly satisfying about sharing a meal.
