added background-color light orange to the contact page

--- a/index.html
+++ b/index.html
@@ -60,5 +60,91 @@
             oldest and most fundamentally unifying of human experiences.
         </p>
     </div>
+
+    <div class="ourmenu" id="ourmenu">
+        <h2>Explore <span>Menu</span> </h2>
+        <div class="box">
+            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+            <h4>Burger Name</h4>
+            <p>There is Something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="box">
+            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+            <h4>Burger Name</h4>
+            <p>There is Something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="box">
+            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+            <h4>Burger Name</h4>
+            <p>There is Something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="box">
+            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+            <h4>Burger Name</h4>
+            <p>There is Something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="box">
+            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+            <h4>Burger Name</h4>
+            <p>There is Something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="box">
+            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+            <h4>Burger Name</h4>
+            <p>There is Something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="box">
+            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+            <h4>Burger Name</h4>
+            <p>There is Something profoundly satisfying about sharing a meal</p>
+        </div>
+    </div>
+
+    <div class="happyhour" id="happyhour">
+        <h2>Hot <span>Deals</span> </h2>
+        <div class="special">
+            <div class="one">
+                <img  src="images/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview (1).png" alt="">
+            </div>
+            <div class="two">
+                <img id="two" src="images/likemeat-73_obA0IB_0-unsplash-removebg-preview.png" alt="">
+            </div>
+            <div class="float">
+            <h3>special combo pack</h3>
+            <h4>Burger Pizz <br>Fries & Drinks</h4>
+            <p>There is something profoundly satisfying about sharing a meal, Eating together,
+            breaking bread together, is one of the oldest and most fundamentally unifying of 
+            human experiences</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="contact" id="contact">
+        <div class="cont">
+            <h3>contact <span>us</span> </h3>
+            <p>There is something profoundly satisfying about sharing a meal.Eating together, 
+                breaking bread together, is one of the oldest and most fundamentally unifying
+                of human experiences.
+            </p>
+            <input type="email" placeholder="email">
+            <br>
+            <a href="#">Send</a>
+        </div>
+    </div>
 </body>
+<footer>
+    <h4>Sunday - Thursday</h4> 
+    <p>4-10PM</p>
+
+    <h4>Friday - Saturday</h4>
+    <p>4-10PM</p>
+    <h5>(423) 266-1121</h5>
+    <p>801 Chestnut Street | <br> Chattanoaga TN 37402</P>
+
+    <h5>FOLLOW</h5>
+    <p>get the latest news sign up for our newsletters</p>
+    <a href="#">Send</a>
+    <p>@Website Design</p>
+</footer>
 </html>
