completed footer content styling

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Street Food</title>
 </head>
 <body>
+    <!-- HOME PAGE -->
     <div class="container">
         <div class="circle"></div>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"/></svg>
         <header>Street Food</header>
+
+        <!-- NAVIGATIION BAR-->
         <div class="nav-link">
             <nav>
                 <ul>
@@ -26,6 +29,8 @@
                 </ul>
             </nav>
         </div>
+
+        <!-- WELCOME PAGE-->
         <div class="content">
             <div class="textBox">
                 <h2>Street <span>Food</span></h2>
@@ -52,6 +57,8 @@
 
         </ul>
     </div>
+
+    <!-- ABOUT PAGE-->
     <div class="about" id="about"> 
         <img src="images/eating_together.png" alt="">
         <h2>Eat together</h2>
@@ -61,45 +68,61 @@
         </p>
     </div>
 
+    <!-- MENU PAGE-->
     <div class="ourmenu" id="ourmenu">
         <h2>Explore <span>Menu</span> </h2>
         <div class="box">
-            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
             <h4>Burger Name</h4>
             <p>There is Something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="box">
+        <div class="box-image">
             <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+        </div>
+        <div class="box">
             <h4>Burger Name</h4>
             <p>There is Something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="box">
+        <div class="box-image">
             <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+        </div>
+        <div class="box">
             <h4>Burger Name</h4>
             <p>There is Something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="box">
+        <div class="box-image">
             <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+        </div>
+        <div class="box">
             <h4>Burger Name</h4>
             <p>There is Something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="box">
+        <div class="box-image">
             <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+        </div>
+        <div class="box">
             <h4>Burger Name</h4>
             <p>There is Something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="box">
+        <div class="box-image">
             <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+        </div>
+        <div class="box">
             <h4>Burger Name</h4>
             <p>There is Something profoundly satisfying about sharing a meal</p>
         </div>
-        <div class="box">
+        <div class="box-image">
             <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
+        </div>
+        <div class="box">
             <h4>Burger Name</h4>
             <p>There is Something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="box-image">
+            <img src="images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" alt="">
         </div>
     </div>
 
+    <!-- HAPPY HOUR PAGE -->
     <div class="happyhour" id="happyhour">
         <h2>Hot <span>Deals</span> </h2>
         <div class="special">
@@ -120,6 +143,7 @@
         </div>
     </div>
 
+    <!-- CONTACT PAGE-->
     <div class="contact" id="contact">
         <div class="cont">
             <h3>contact <span>us</span> </h3>
@@ -133,18 +157,28 @@
         </div>
     </div>
 </body>
+
+<!-- FOOTER-->
 <footer>
+    <div class="fot">
     <h4>Sunday - Thursday</h4> 
     <p>4-10PM</p>
 
-    <h4>Friday - Saturday</h4>
+    <h4 id="het">Friday - Saturday</h4>
     <p>4-10PM</p>
+    </div>
+
+    <div class="sept">
     <h5>(423) 266-1121</h5>
     <p>801 Chestnut Street | <br> Chattanoaga TN 37402</P>
+    </div>
 
+    <div class="fol">
     <h5>FOLLOW</h5>
-    <p>get the latest news sign up for our newsletters</p>
-    <a href="#">Send</a>
+    <img src="https://www.flaticon.com/premium-icon/instagram_3621464?term=instagram%20logo&page=1&position=92&page=1&position=92&related_id=3621464&origin=search" alt="">
+    <p>GET THE LATEST NEWS SIGN UP <br> FOR OUR NEWSLETTERS</p>
     <p>@Website Design</p>
+    <a href="#">Send</a>
+    </div>
 </footer>
 </html>
