modified the menu page styling the background-color to lightgray

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
             <div class="float">
             <h3>special combo pack</h3>
             <h4>Burger Pizz <br>Fries & Drinks</h4>
+            </div>
+            <div class="pag">
             <p>There is something profoundly satisfying about sharing a meal, Eating together,
             breaking bread together, is one of the oldest and most fundamentally unifying of 
             human experiences</p>
@@ -147,10 +149,12 @@
     <div class="contact" id="contact">
         <div class="cont">
             <h3>contact <span>us</span> </h3>
+            <div class="page">
             <p>There is something profoundly satisfying about sharing a meal.Eating together, 
                 breaking bread together, is one of the oldest and most fundamentally unifying
                 of human experiences.
             </p>
+            </div>
             <input type="email" placeholder="email">
             <br>
             <a href="#">Send</a>
