modified headingin to gray color in the about page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- ABOUT PAGE-->
     <div class="about" id="about"> 
         <img src="images/eating_together.png" alt="">
-        <h2>Eat together</h2>
+        <h2 class="#">Eat together</h2>
         <p>There is Something profoundly satisfying about sharing a meal.
             Eating together,breaking bread together,is one of the 
             oldest and most fundamentally unifying of human experiences.
